fix(minha-publicacoes): ajuste na pagina de minhas publicacoes e criado hook pra modal overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,12 +14,13 @@
 }
 body {
   -webkit-font-smoothing: antialiased;
-  background: #FCFCFA;
+  background: #fcfcfa;
 }
 body,
 input,
 button,
-textarea {
+textarea,
+option {
   font-family: "Inter", sans-serif;
 }
 button,
